# Low-power-sensor

./: CMakeLists.txt  README.md  esp32_studio.json  partitions.csv  sdkconfig.defaults
components/OpenOCD/: CMakeLists.txt  OpenOCD.c
main/: CMakeLists.txt  main.c  main.h
main/config/: app_config.h
main/drivers/: adc_battery.c  adc_battery.h  lora_uart.c  lora_uart.h  mpu6050.c  mpu6050.h
main/protocol/: gateway_protocol.c  gateway_protocol.h
main/tasks/: command_task.c  command_task.h  power_mgmt_task.c  power_mgmt_task.h  sensor_acq_task.c  sensor_acq_task.h  sensor_transient_task.c  sensor_transient_task.h
main/ulp/: ulp_main.S  ulp_shared.h
